--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prosta Gra</title>
+  <title>Gra 3D - Chodzący Ludzik</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Graj i zdobywaj punkty!</h1>
-  <button id="scoreButton">Kliknij mnie!</button>
-  <p id="score">Punkty: 0</p>
-
+  <h1>Gra 3D - Poruszaj ludzikiem!</h1>
+  <div id="gameContainer"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
