--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Gra 3D - Poruszaj ludzikiem!</p>
+  <h1>Gra 3D - Poruszaj ludzikiem!</h1>
   <div id="gameContainer"></div>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="script.js"></script>
