--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gra 3D - Chodzący Ludzik</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Gra 3D - Chodzenie po podłodze</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
 </head>
 <body>
-  <h1>Gra 3D - Poruszaj ludzikiem!</h1>
-  <div id="gameContainer"></div>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
