--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gra 3D - Chodzenie po podłodze</title>
+  <title>Gra 3D - Chodzenie</title>
   <style>
     body {
       margin: 0;
@@ -15,6 +15,6 @@
   </style>
 </head>
 <body>
-  <script src="script2.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
